  atkTextAttribute work.) [Ivo]
+ Refactored atkModule to make it possible to easily change the default
  node location (added method getNodeFile). [Peter]
+ Added $config_use_browser_language configuration option to control
  whatever ATK should use the browser language or the language
  specified in the configuration file. [Peter]
* Fixed bug with PHP5 class name retrieval in atkMetaNode. Always
  forcefully lowercase the class name used as node type. [Peter]
* Fixed bug in getQueryMode and added testcases for the function.
  [Dennis-Jan]
* In case of a ML node and physical_delete flag of the atkfileattribute
  the file were delete twice. But the second it generates an error.
  [Dennis-Jan]
* Changed the dispatch.php in the skel to use atkcontroller object. Note,
  the old method ($obj->dispatch) stills works but is deprecated. It is
  recommended to use the new dispatch.php from the skel directory.
  [Lineke]
* Some functional decomposition of atkSaveHandler [Maurice]
* Added the ability to override an actionHandler class in function
  atkNode::callHandler. [Maurice]
* Added notification for trigger events (eg preAdd, postAdd). [Maurice]
* Added some checks in atkSessionManager to see if the stack really contains
  an atknodetype param. [Maurice]
* Added check in atkUi::title to see if de node was really created.
  [Maurice]
* Added fieldprefix for javascript in atkmanyboolrelation. [Lineke]
* atkManyBoolRelation does not use AMDAE anymore, php now supports multi-
  dimensional arrays (might break in older php versions). [Lineke]
* atkManyToManyRelation now adds tablename before remoteKey when deleting.
  [Lineke]
* On an error atkSaveHandler now determines if it was in admin or add mode.
  A new hidden var 'atkprevaction' is posted in add and edit pages to find
  out. This fixes failed validation to display the wrong page. [Maurice]
* Function dispatch_url now checks if parameter $atkaction contains a value.
  [Maurice]